--- a/src/styles.css
+++ b/src/styles.css
@@ -3,139 +3,204 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 input,
 button,
 textarea {
-    font: inherit;
+  font: inherit;
 }
 
-
 /* FONT */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 
 /* GENERAL STYLES */
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #343434;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    border: 1px solid red;
+  font-family: "Roboto", sans-serif;
+  background-color: #343434;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  border: 1px solid red;
 }
 
 main {
-    max-width: 200px;
-    background-color: #000;
-    padding-inline: 0.3rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.35rem;
-    border: 2px solid #ffffff9f;
-    border-radius: 20px;
-    position: absolute;
+  max-width: 200px;
+  background-color: #000;
+  padding-inline: 0.3rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.35rem;
+  border: 2px solid #ffffff9f;
+  border-radius: 20px;
+  position: absolute;
 }
 
 button {
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    padding: 1rem;
-    display: grid;
-    place-content: center;
-    font-size: 0.8rem;
-    font-weight: 500;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  padding: 1rem;
+  display: grid;
+  place-content: center;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 /* ---------------------------------- */
 
-
 /* DISPLAY */
 
 .display {
-    background-color: hsla(0, 1%, 44%, 0.151);
-    padding-inline: 0.7rem;
-    padding-top: 0.35rem;
-    border-radius: 10px 10px 2px 2px;
-    min-height: 100px;
-    width: 170px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
+  background-color: hsla(0, 1%, 44%, 0.151);
+  padding-inline: 0.7rem;
+  padding-top: 0.35rem;
+  border-radius: 10px 10px 2px 2px;
+  min-height: 100px;
+  width: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .input {
-    font-size: 1.5rem;
-    max-width: 170px;
-    padding-left: 15px ;
-    overflow-wrap: break-word;
+  font-size: 1.5rem;
+  max-width: 170px;
+  padding-left: 15px;
+  overflow-wrap: break-word;
 }
 
 .output {
-    font-size: 2rem;
-    max-width: 170px;
-    padding-left: 15px ;
-    overflow-wrap: break-word;
+  font-size: 2rem;
+  max-width: 170px;
+  padding-left: 15px;
+  overflow-wrap: break-word;
 }
-
 
 /* EXTRAS */
 
 .extras {
-    display: flex;
-    justify-content: space-between;
-    padding-block: 0.2rem;
+  display: flex;
+  justify-content: space-between;
+  padding-block: 0.2rem;
 }
 
 .extras div:first-child {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 /* BUTTONS */
 
 button:nth-child(17) {
-    border-radius: 20px;
-    width: 75px;
-    grid-column-start: 1;
-    grid-column-end: 3;
+  border-radius: 20px;
+  width: 75px;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .calculator-keys {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.5rem;
-    padding: 0.3rem;
-    background-color: hsla(0, 0%, 13%, 0.493);
-    border-radius: 2px 2px 10px 10px;
-    padding-top: 0.3rem;
-    padding-bottom: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+  padding: 0.3rem;
+  background-color: hsla(0, 0%, 13%, 0.493);
+  border-radius: 2px 2px 10px 10px;
+  padding-top: 0.3rem;
+  padding-bottom: 0.5rem;
 }
 
 .dark-btn {
-    color: #fff;
-    background-color: #333;
+  color: #fff;
+  background-color: #333;
 }
 
 .yellow-btn {
-    color: #fff;
-    background-color: #f9970e;
+  color: #fff;
+  background-color: #f9970e;
 }
 
 .light-btn {
-    background-color: #9c9c9c;
+  background-color: #9c9c9c;
+}
+
+/* Styling the calculator history board */
+
+.calc-history {
+  position: relative;
+  left: 200px;
+  inline-size: 200px;
+  height: 270px;
+  background-color: #636363;
+  border-radius: 5px;
+  margin-top: 6px;
+  padding: 10px;
+  box-shadow: 0px 5px 10px #444444 inset;
+}
+
+.calc-history-box {
+  background-color: hsla(0, 1%, 43%, 0.151);
+  inline-size: 180px;
+  height: 220px;
+  resize: none;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.calc-history hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+span {
+  inline-size: 180px;
+  padding: 5px;
+  display: inline;
+  font-style: italic;
+}
+
+.addDisplay {
+  display: block !important;
+}
+
+.progress {
+  position: relative;
+  width: calc(100% - 8px);
+  height: 5px;
+  transform: scaleX(0);
+  transform-origin: left;
+
+  background: linear-gradient(to right, #7f837f, #191e17, #f9970e);
+  border-radius: inherit;
+  animation: progress 2.5s 0.3s linear;
+}
+
+@keyframes fade-in {
+  5% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+  95% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes progress {
+  to {
+    transform: scaleX(1);
+  }
 }
